# ArXivInspector

./: .gitignore  README.md  docker-compose.yml  index_docs.py  pyproject.toml
arxiv_inspector/: __init__.py  indexing.py
data_collection/: arxiv.py  download_pdfs.py
scripts/: arxiv_papers.db  download_pdfs.py  ingestion_script.py
