[tool.poetry]
name = "arxiv-inspector"
version = "0.1.0"
description = ""
authors = ["Sawyer <sawyerczupka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
llama-index = "^0.9.8.post1"
transformers = "^4.35.2"
torch = "^2.1.1"
sentence-transformers = "^2.2.2"
qdrant-client = "^1.6.9"
pypdf = "^3.17.1"
langchain = "^0.0.350"



[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
